--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -125,7 +125,7 @@
     font-size: 25px;
     transform: translateX(100%) rotate(90deg);
     -moz-transform: translateX(100%) rotate(90deg);
-    -webkit-transform: translateX(100%) rotate(90deg);
+    -webkit-transform: translateX(100%) rotate(180deg);
     color: white;
     z-index: 2;
     transition: $main-transition-all-5s-ease-out;
